adding CarrierInfoDownloader, get routes/carrier data from network, fixed yaml, refactoring
